--- a/GCR.Web/Content/_base.css
+++ b/GCR.Web/Content/_base.css
@@ -461,114 +461,122 @@
     width: 960px;
     margin: 0 auto;
     padding: 0;
+    /* Nested Column Classes */
+  
+    /* Base Grid */
+  
+    /* Offsets */
+  
+    /* Borders */
+  
   }
   .container .column,
   .container .columns {
     float: left;
     display: inline;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
   }
   .container .row {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     display: block;
   }
   .container .two.row {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
   .container .three.row {
+    margin-bottom: 25px;
+  }
+  .container .four.row {
     margin-bottom: 50px;
   }
-  /* Nested Column Classes */
-  .column.alpha,
-  .columns.alpha {
+  .container .column.alpha,
+  .container .columns.alpha {
     margin-left: 0;
   }
-  .column.omega,
-  .columns.omega {
+  .container .column.omega,
+  .container .columns.omega {
     margin-right: 0;
   }
-  /* Base Grid */
   .container .one.column,
   .container .one.columns {
-    width: 20px;
+    width: 30px;
   }
   .container .two.columns {
-    width: 60px;
+    width: 70px;
   }
   .container .three.columns {
-    width: 100px;
+    width: 110px;
   }
   .container .four.columns {
-    width: 140px;
+    width: 150px;
   }
   .container .five.columns {
-    width: 180px;
+    width: 190px;
   }
   .container .six.columns {
-    width: 220px;
+    width: 230px;
   }
   .container .seven.columns {
-    width: 260px;
+    width: 270px;
   }
   .container .eight.columns {
-    width: 300px;
+    width: 310px;
   }
   .container .nine.columns {
-    width: 340px;
+    width: 350px;
   }
   .container .ten.columns {
-    width: 380px;
+    width: 390px;
   }
   .container .eleven.columns {
-    width: 420px;
+    width: 430px;
   }
   .container .twelve.columns {
-    width: 460px;
+    width: 470px;
   }
   .container .thirteen.columns {
-    width: 500px;
+    width: 510px;
   }
   .container .fourteen.columns {
-    width: 540px;
+    width: 550px;
   }
   .container .fifteen.columns {
-    width: 580px;
+    width: 590px;
   }
   .container .sixteen.columns {
-    width: 620px;
+    width: 630px;
   }
   .container .seventeen.columns {
-    width: 660px;
+    width: 670px;
   }
   .container .eighteen.columns {
-    width: 700px;
+    width: 710px;
   }
   .container .nineteen.columns {
-    width: 740px;
+    width: 750px;
   }
   .container .twenty.columns {
-    width: 780px;
+    width: 790px;
   }
   .container .twentyone.columns {
-    width: 820px;
+    width: 830px;
   }
   .container .twentytwo.columns {
-    width: 860px;
+    width: 870px;
   }
   .container .twentythree.columns {
-    width: 900px;
+    width: 910px;
   }
   .container .twelvefour.columns {
-    width: 940px;
+    width: 950px;
   }
   .container .one-third.column {
-    width: 300px;
+    width: 310px;
   }
   .container .two-thirds.column {
-    width: 620px;
+    width: 630px;
   }
-  /* Offsets */
   .container .offset-by-one {
     padding-left: 40px;
   }
@@ -638,7 +646,6 @@
   .container .offset-by-twentythree {
     padding-left: 920px;
   }
-  /* Borders */
   .container .border {
     background: url("images/content-border.gif") repeat-y scroll 0 0 transparent;
   }
@@ -843,24 +850,7 @@ body {
   margin: 0 auto;
   color: #fafafa;
 }
-.container {
-  background-color: #ffffff;
-  padding: 40px 0 20px 0;
-}
-#footer {
-  min-height: 40px;
-  background: #202020;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Patua One', cursive;
-  font-weight: normal;
-}
-.est {
+#header .est {
   background-color: #053472;
   position: absolute;
   top: 0;
@@ -869,33 +859,33 @@ h6 {
   font-size: 1.2em;
   font-weight: 600;
 }
-.nav {
+#header .nav {
   border: 1px solid #868686;
   margin-top: 23px;
   -moz-border-radius: 1px;
   -webkit-border-radius: 1px;
   border-radius: 1px;
 }
-.nav ul {
+#header .nav ul {
   line-height: 1;
 }
-.nav ul,
-.nav li {
+#header .nav ul,
+#header .nav li {
   list-style: none outside none;
   margin: 0;
   padding: 0;
 }
-.nav li {
-  background: url('images/menu-border2.gif') no-repeat scroll 0 9px transparent;
+#header .nav li {
+  background: url('images/menu-border.gif') no-repeat scroll 0 9px transparent;
   float: left;
   position: relative;
   text-align: center;
   width: 128px;
 }
-.nav li.alpha {
+#header .nav li.alpha {
   background: none;
 }
-.nav a {
+#header .nav a {
   color: #fafafa;
   text-decoration: none;
   display: block;
@@ -906,7 +896,7 @@ h6 {
   position: relative;
   text-transform: uppercase;
 }
-.nav .highlite {
+#header .nav .highlite {
   background-color: #0079ce;
   height: 5px;
   opacity: 0;
@@ -916,19 +906,37 @@ h6 {
   -webkit-transition: opacity 0.4s;
   -o-transition: opacity 0.4s;
 }
-.nav li:hover .highlite,
-.nav li.on .highlite {
+#header .nav li:hover .highlite,
+#header .nav li.on .highlite {
   opacity: 1;
   visibility: visible;
 }
-.fb {
+#header .fb {
   vertical-align: middle;
   font-weight: 600;
   margin-top: 30px;
 }
-.fb span,
-.fb img {
+#header .fb span,
+#header .fb img {
   vertical-align: middle;
+}
+.container {
+  background-color: #ffffff;
+  padding: 40px 0 20px 0;
+}
+#footer {
+  min-height: 40px;
+  background: #202020;
+  color: #fafafa;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Patua One', cursive;
+  font-weight: normal;
 }
 .top-shadow {
   background: url('/Content/images/top-shadow.png') left top repeat-x;
@@ -1049,20 +1057,20 @@ div.info a {
   margin: 0;
   border-width: 0;
 }
-#top-message.info {
+#top-message .info {
   background: #bde5f8;
   color: #205791;
 }
-#top-message.success {
+#top-message .success {
   background: #dff2bf;
   color: #264409;
 }
-#top-message.notice {
+#top-message .notice {
   background: #feefb3;
   color: #514721;
 }
-#top-message.error,
-#flashMessage.alert {
+#top-message .error,
+#top-message .alert {
   background: #ffbaba;
   color: #8a1f11;
 }
@@ -1076,22 +1084,23 @@ div.info a {
   border: none;
   padding: 8px 20px 5px 50px;
 }
-#top-message.info div {
+#top-message .info div {
   background: url('images/Info32.png') no-repeat 10px center;
 }
-#top-message.success div {
+#top-message .success div {
   background: url('images/Success32.png') no-repeat 10px center;
 }
-#top-message.notice div {
+#top-message .notice div {
   background: url('images/Warning32.png') no-repeat 10px center;
 }
-#top-message.error div,
-#flashMessage.alert div {
+#top-message .error div,
+#top-message .alert div {
   background: url('images/Error32.png') no-repeat 10px center;
 }
-/* End styles for validation helpers */
 /* jcarousel home page theme */
 .jcarousel-skin-homepage {
+  /*height of the images*/
+
   height: 450px;
   overflow: hidden;
 }
@@ -1099,13 +1108,19 @@ div.info a {
   float: left;
 }
 .jcarousel-skin-homepage .jcarousel-container {
+  /*center and offset by 1.5 the width of the images*/
+
   left: 50%;
   margin-left: -1440px;
 }
 .jcarousel-skin-homepage .jcarousel-clip-horizontal {
+  /*height of the images*/
+
   height: 450px;
 }
 .jcarousel-skin-homepage .jcarousel-item {
+  /*width and height of the images*/
+
   width: 960px;
   height: 450px;
   position: relative;
@@ -1113,36 +1128,79 @@ div.info a {
 .jcarousel-skin-homepage .jcarousel-item-horizontal {
   margin: 0;
 }
-.jcarousel-skin-homepage .jcarousel-next-horizontal {
+.jcarousel-skin-homepage .jcarousel-reveal {
   position: absolute;
-  bottom: 210px;
+  /*height of the image /2 - height of reveal then rounded down*/
+
+  bottom: 130px;
   left: 0;
-  margin-left: 1880px;
-  width: 35px;
-  height: 37px;
-  cursor: pointer;
-  background: url(images/carousel_next.png) no-repeat 0 top;
+  /*width of the button plus padding plus 5px to the outer edge*/
+
+  width: 90px;
+  /*height of the button plus top and bottom padding*/
+
+  height: 155px;
   z-index: 2;
-  opacity: 0.5;
-}
-.jcarousel-skin-homepage .jcarousel-prev-horizontal {
-  position: absolute;
-  z-index: 2;
-  bottom: 210px;
-  width: 35px;
-  left: 0;
-  margin-left: 965px;
-  height: 37px;
-  cursor: pointer;
-  background: url(images/carousel_previous.png) no-repeat 0 top;
-  opacity: 0.5;
+  background: url(images/transparent.gif) repeat left top;
+  opacity: 0.4;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+  filter: alpha(opacity=30);
   transition: opacity 0.5s;
   -moz-transition: opacity 0.5s;
   -webkit-transition: opacity 0.5s;
   -o-transition: opacity 0.5s;
 }
-.jcarousel-skin-homepage .jcarousel-next-horizontal:hover,
-.jcarousel-skin-homepage .jcarousel-prev-horizontal:hover {
+.jcarousel-skin-homepage .jcarousel-reveal.next {
+  /*width of images * 2 - width of reveal*/
+
+  margin-left: 1830px;
+}
+.jcarousel-skin-homepage .jcarousel-reveal.prev {
+  /*width of images*/
+
+  margin-left: 960px;
+}
+.jcarousel-skin-homepage .jcarousel-reveal div {
+  position: absolute;
+  /*top and bottom padding*/
+
+  top: 60px;
+  /*width of button*/
+
+  width: 35px;
+  /*height of button*/
+
+  height: 35px;
+  cursor: pointer;
+  opacity: 0.5;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+  filter: alpha(opacity=50);
+  transition: opacity 0.5s;
+  -moz-transition: opacity 0.5s;
+  -webkit-transition: opacity 0.5s;
+  -o-transition: opacity 0.5s;
+}
+.jcarousel-skin-homepage .jcarousel-reveal.next div {
+  /*5px to the outer edge*/
+
+  right: 5px;
+  background: url(images/carousel_next.png) no-repeat 0 top;
+}
+.jcarousel-skin-homepage .jcarousel-reveal.prev div {
+  /*5px to the outer edge*/
+
+  left: 5px;
+  background: url(images/carousel_previous.png) no-repeat 0 top;
+}
+.jcarousel-skin-homepage .jcarousel-reveal:hover {
   opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  filter: alpha(opacity=100);
+}
+.jcarousel-skin-homepage .jcarousel-reveal.next div:hover,
+.jcarousel-skin-homepage .jcarousel-reveal.prev div:hover {
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
 }
 
