--- a/GCR.Web/Content/site.less
+++ b/GCR.Web/Content/site.less
@@ -1,6 +1,6 @@
 ﻿@grid-width: 960px;
 @columns: 24;
-@gutter: 10px;
+@gutter: 5px;
 
 @error-font: #8a1f11;
 @error-background: #FFBABA;
@@ -77,6 +77,82 @@ body
 	width: @grid-width; 
 	margin: 0 auto; 
 	color: @font-alt-color;
+
+	.est{
+	background-color:@strong-color; 
+	position:absolute; 
+	top: 0; 
+	right:0; 
+	padding:20px 10px 10px 10px;
+	font-size:1.2em;
+	font-weight:600;
+	}
+	.nav
+	{
+		border: 1px solid lighten(@footer-color, 40%);
+		margin-top:23px;
+		.rounded-corners(1px);
+	}
+
+	.nav ul{
+		line-height: 1;
+	}
+	.nav ul, .nav li {
+		list-style: none outside none;
+		margin: 0;
+		padding: 0;
+	}
+
+	.nav  li {
+		background: url('images/menu-border.gif') no-repeat scroll 0 9px transparent;
+		float: left;
+		position: relative;
+		text-align: center;
+		width: 128px;
+	}
+	.nav li.alpha {
+		background: none;
+	}
+
+	.nav a {
+		color: @font-alt-color;
+		text-decoration:none;
+		display: block;
+		font-family: Arial, 'DejaVu Sans', 'Liberation Sans', Freesans, sans-serif;
+		font-size: 1.1em;
+		font-weight: bold;
+		padding: 20px 0 15px;
+		position: relative;
+		text-transform:uppercase;
+	}
+
+	.nav .highlite {
+		background-color: @accent-color;
+		height:5px;
+		opacity:0;
+		visibility:hidden;
+		transition:opacity 0.4s;
+		-moz-transition:opacity 0.4s;
+		-webkit-transition:opacity 0.4s;
+		-o-transition:opacity 0.4s;
+	}
+
+	.nav li:hover .highlite, .nav li.on .highlite {
+		opacity:1;
+		visibility:visible;
+	}
+
+	.fb
+	{
+		vertical-align: middle;
+		font-weight: 600;
+		margin-top: 30px;
+	}
+
+	.fb span, .fb img
+	{
+		vertical-align:middle;
+	}
 }
 
 .container
@@ -89,87 +165,13 @@ body
 {
 	min-height: 40px;
 	background: @footer-color;
+	color: @font-alt-color;
 }
 
 h1, h2, h3, h4, h5, h6
 {
 	font-family: 'Patua One', cursive;
 	font-weight: normal;
-}
-.est{
-	background-color:@strong-color; 
-	position:absolute; 
-	top: 0; 
-	right:0; 
-	padding:20px 10px 10px 10px;
-	font-size:1.2em;
-	font-weight:600;
-}
-.nav
-{
-    border: 1px solid lighten(@footer-color, 40%);
-	margin-top:23px;
-	.rounded-corners(1px);
-}
-
-.nav ul{
-    line-height: 1;
-}
-.nav ul, .nav li {
-    list-style: none outside none;
-    margin: 0;
-    padding: 0;
-}
-
-.nav  li {
-    background: url('images/menu-border.gif') no-repeat scroll 0 9px transparent;
-    float: left;
-    position: relative;
-    text-align: center;
-    width: 128px;
-}
-.nav li.alpha {
-    background: none;
-}
-
-.nav a {
-    color: @font-alt-color;
-	text-decoration:none;
-    display: block;
-    font-family: Arial, 'DejaVu Sans', 'Liberation Sans', Freesans, sans-serif;
-    font-size: 1.1em;
-    font-weight: bold;
-    padding: 20px 0 15px;
-    position: relative;
-	text-transform:uppercase;
-}
-
-.nav .highlite {
-	background-color: @accent-color;
-	height:5px;
-	opacity:0;
-	visibility:hidden;
-	transition:opacity 0.4s;
-	-moz-transition:opacity 0.4s;
-	-webkit-transition:opacity 0.4s;
-	-o-transition:opacity 0.4s;
-}
-
-.nav li:hover .highlite, .nav li.on .highlite {
-	opacity:1;
-	visibility:visible;
-}
-
-.fb
-{
-    vertical-align: middle;
-	font-weight: 600;
-	margin-top: 30px;
-}
-
-.fb span, .fb img
-{
-	vertical-align:middle;
 }
 
 .top-shadow
@@ -316,171 +318,179 @@ div.info a
 	padding: 0;
 	margin: 0;
 	border-width: 0;
-}
 
-#top-message.info
-{
-	background: @info-background;
-	color: @info-font;
-}
+	.info
+	{
+		background: @info-background;
+		color: @info-font;
+	}
 
-#top-message.success
-{
-	background: @success-background;
-	color: @success-font;
-}
+	.success
+	{
+		background: @success-background;
+		color: @success-font;
+	}
 
-#top-message.notice
-{
-	background: @notice-background;
-	color: @notice-font;
-}
+	.notice
+	{
+		background: @notice-background;
+		color: @notice-font;
+	}
 
-#top-message.error, #flashMessage.alert
-{
-	background: @error-background;
-	color: @error-font;
-}
+	.error, .alert
+	{
+		background: @error-background;
+		color: @error-font;
+	}
 
-#top-message div
-{
-	overflow: hidden;
-	/*width 962px minus 50px left pad and 20px right pad*/
-	width: 892px;
-	margin: 0 auto;
-	text-align: center;
-	border: none;
-	padding: 8px 20px 5px 50px;
-}
+	div
+	{
+		overflow: hidden;
+		/*width 962px minus 50px left pad and 20px right pad*/
+		width: 892px;
+		margin: 0 auto;
+		text-align: center;
+		border: none;
+		padding: 8px 20px 5px 50px;
+	}
 
-#top-message.info div
-{
-	background: url('images/Info32.png') no-repeat 10px center;
-}
+	.info div
+	{
+		background: url('images/Info32.png') no-repeat 10px center;
+	}
 
-#top-message.success div
-{
-	background: url('images/Success32.png') no-repeat 10px center;
-}
+	.success div
+	{
+		background: url('images/Success32.png') no-repeat 10px center;
+	}
 
-#top-message.notice div
-{
-	background: url('images/Warning32.png') no-repeat 10px center;
-}
+	.notice div
+	{
+		background: url('images/Warning32.png') no-repeat 10px center;
+	}
 
-#top-message.error div, #flashMessage.alert div
-{
-	background: url('images/Error32.png') no-repeat 10px center;
+	.error div, .alert div
+	{
+		background: url('images/Error32.png') no-repeat 10px center;
+	}
 }
-
-/* End styles for validation helpers */
 
 /* jcarousel home page theme */
 .jcarousel-skin-homepage
 {
+    /*height of the images*/
     height: 450px;
     overflow: hidden;
-}
 
-.jcarousel-skin-homepage li
-{
-    float: left;
-}
-.jcarousel-skin-homepage .jcarousel-container
-{
-    left: 50%;
-    margin-left: -1440px;
-}
+    li
+    {
+        float: left;
+    }
 
-.jcarousel-skin-homepage .jcarousel-clip-horizontal
-{
-    height: 450px;
-}
+    .jcarousel-container
+    {
+        /*center and offset by 1.5 the width of the images*/
+        left: 50%;
+        margin-left: -1440px;
+    }
 
-.jcarousel-skin-homepage .jcarousel-item
-{
-    width: 960px;
-    height: 450px;
-    position: relative;
-}
+    .jcarousel-clip-horizontal
+    {
+        /*height of the images*/
+        height: 450px;
+    }
 
-.jcarousel-skin-homepage .jcarousel-item-horizontal
-{
-    margin: 0;
-}
+    .jcarousel-item
+    {
+        /*width and height of the images*/
+        width: 960px;
+        height: 450px;
+        position: relative;
+    }
 
-.jcarousel-skin-homepage .jcarousel-next-horizontal
-{
-    position: absolute;
-    top: 30px;
-    right: 5px;
-    width: 35px;
-    height: 35px;
-    cursor: pointer;
-    background: url(images/carousel_next.png) no-repeat 0 top;
-	opacity: 0.5;
-	transition:opacity 0.5s;
-	-moz-transition:opacity 0.5s;
-	-webkit-transition:opacity 0.5s;
-	-o-transition:opacity 0.5s;
-}
+    .jcarousel-item-horizontal
+    {
+        margin: 0;
+    }
 
-.jcarousel-skin-homepage .jcarousel-prev-horizontal
-{
-    position: absolute;
-    top: 30px;
-	left: 5px;
-    width: 35px;
-    height: 35px;
-    cursor: pointer;
-    background: url(images/carousel_previous.png) no-repeat 0 top;
-	opacity: 0.5;
-	transition:opacity 0.5s;
-	-moz-transition:opacity 0.5s;
-	-webkit-transition:opacity 0.5s;
-	-o-transition:opacity 0.5s;
-}
+    .jcarousel-reveal
+    {
+        position: absolute;
+        /*height of the image /2 - height of reveal then rounded down*/
+        bottom: 130px;
+        left: 0;
+        /*width of the button plus padding plus 5px to the outer edge*/
+        width: 90px;
+        /*height of the button plus top and bottom padding*/
+        height: 155px;
+        z-index: 2;
+        background: url(images/transparent.gif) repeat left top;
+        opacity: 0.4;
+		-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+		filter: alpha(opacity=30);
+        transition: opacity 0.5s;
+        -moz-transition: opacity 0.5s;
+        -webkit-transition: opacity 0.5s;
+        -o-transition: opacity 0.5s;
+    }
 
-.jcarousel-skin-homepage .jcarousel-reveal-next
-{
-    position: absolute;
-    bottom: 180px;
-    left: 0;
-    margin-left: 1850px;
-    width: 70px;
-    height: 95px;
-    z-index: 2;
-	background: url(images/transparent.gif) repeat left top;
-	opacity: 0.3;
-	transition:opacity 0.5s;
-	-moz-transition:opacity 0.5s;
-	-webkit-transition:opacity 0.5s;
-	-o-transition:opacity 0.5s;
-}
+    .jcarousel-reveal.next
+    {
+        /*width of images * 2 - width of reveal*/
+        margin-left: 1830px;
+    }
 
-.jcarousel-skin-homepage .jcarousel-reveal-prev
-{
-    position: absolute;
-    bottom: 180px;
-    left: 0;
-    margin-left: 960px;
-    width: 70px;
-    height: 95px;
-    z-index: 2;
-	background: url(images/transparent.gif) repeat left top;
-	opacity: 0.3;
-	transition:opacity 0.5s;
-	-moz-transition:opacity 0.5s;
-	-webkit-transition:opacity 0.5s;
-	-o-transition:opacity 0.5s;
-}
+    .jcarousel-reveal.prev
+    {
+        /*width of images*/
+        margin-left: 960px;
+    }
 
-.jcarousel-skin-homepage .jcarousel-reveal-next:hover, .jcarousel-skin-homepage .jcarousel-reveal-prev:hover
-{
-    opacity: 1;
-}
-.jcarousel-skin-homepage .jcarousel-next-horizontal:hover, .jcarousel-skin-homepage .jcarousel-prev-horizontal:hover
-{
-    opacity: 0.8;
+    .jcarousel-reveal div
+    {
+        position: absolute;
+        /*top and bottom padding*/
+        top: 60px;
+        /*width of button*/
+        width: 35px;
+        /*height of button*/
+        height: 35px;
+        cursor: pointer;
+        opacity: 0.5;
+		-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+		filter: alpha(opacity=50);
+        transition: opacity 0.5s;
+        -moz-transition: opacity 0.5s;
+        -webkit-transition: opacity 0.5s;
+        -o-transition: opacity 0.5s;
+    }
+
+    .jcarousel-reveal.next div
+    {
+        /*5px to the outer edge*/
+        right: 5px;
+        background: url(images/carousel_next.png) no-repeat 0 top;
+    }
+
+    .jcarousel-reveal.prev div
+    {
+        /*5px to the outer edge*/
+        left: 5px;
+        background: url(images/carousel_previous.png) no-repeat 0 top;
+    }
+
+    .jcarousel-reveal:hover
+    {
+        opacity: 1;
+		-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+		filter: alpha(opacity=100);
+    }
+
+    .jcarousel-reveal.next div:hover, .jcarousel-reveal.prev div:hover
+    {
+        opacity: 0.8;
+		-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+		filter: alpha(opacity=80);
+    }
 }
 
