--- a/GCR.Web/Views/Home/Index.cshtml
+++ b/GCR.Web/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <div style="position:relative; overflow:hidden;	margin-bottom:20px;">
 <ul id="mycarousel" class="jcarousel-skin-homepage">
         <li><img src="~/Content/images/slide5.jpg" width="960" height="450" alt=""></li>
-        	<li class="current"><img src="~/Content/images/slide1.jpg" width="960" height="450" alt=""></li>
+        	<li><img src="~/Content/images/slide1.jpg" width="960" height="450" alt=""></li>
             <li><img src="~/Content/images/slide6.jpg" width="960" height="450" alt=""></li>
             <li><img src="~/Content/images/slide2.jpg" width="960" height="450" alt=""></li>
             <li><img src="~/Content/images/slide3.jpg" width="960" height="450" alt=""></li>
@@ -18,7 +18,7 @@
     <div class="bottom-shadow"></div>
 </div>
 }
-<div class="three row">
+<div class="four row">
     <div class="wrapper eight border">
         <div class="six columns offset-by-one alpha">
             <h2>Goals</h2>
@@ -62,7 +62,7 @@
         </div>
     </div>
 </div>
-<div class="two row">
+<div class="three row">
     <div class="sixteen border">
         <div class="eight border">
             <div class="six columns offset-by-one alpha">
@@ -171,31 +171,31 @@
 @section Scripts {
    <script type="text/javascript">
        function mycarousel_initCallback(carousel) {
-           var prev = jQuery('<div class="jcarousel-reveal-prev"><div class="jcarousel-prev jcarousel-prev-horizontal"></div></div>');
-           var next = jQuery('<div class="jcarousel-reveal-next"><div class="jcarousel-next jcarousel-next-horizontal"></div></div>');
 
-           carousel.container.append(prev);
-           carousel.container.append(next);
+           var reveal_next = $('<div class="jcarousel-reveal next"></div>').append(
+               $('<div></div>').bind('click', function () {
+                   carousel.next();
+                   return false;
+               }));
 
-           next.bind('click', function () {
-               carousel.next();
-               return false;
-           });
+           var reveal_prev = $('<div class="jcarousel-reveal prev"></div>').append(
+                $('<div></div>').bind('click', function () {
+                    carousel.prev();
+                    return false;
+                }));
 
-           prev.bind('click', function () {
-               carousel.prev();
-               return false;
-           });
+           carousel.container.append(reveal_next);
+           carousel.container.append(reveal_prev);
        };
-jQuery(document).ready(function() {
-    jQuery('#mycarousel').jcarousel({
-        wrap: 'circular',
-        auto: 8,
-        buttonNextHTML: null,
-        buttonPrevHTML: null,
-        initCallback: mycarousel_initCallback,
-        easing: 'easeOutSine',
-        scroll: 1
+       $(function () {
+           $('#mycarousel').jcarousel({
+                wrap: 'circular',
+                auto: 8,
+                buttonNextHTML: null,
+                buttonPrevHTML: null,
+                initCallback: mycarousel_initCallback,
+                easing: 'easeOutSine',
+                scroll: 1
     });
 });
 </script>
