--- a/GCR.Web/Content/base.less
+++ b/GCR.Web/Content/base.less
@@ -200,17 +200,16 @@
 		.offset-by-ten                   { padding-left: (10/@columns * @grid-width); }
 		.offset-by-eleven                { padding-left: (11/@columns * @grid-width); }
 		.offset-by-twelve                { padding-left: (12/@columns * @grid-width); }
-		.offset-by-thirteen              { padding-left: (13/@columns * @grid-width); }
-		.offset-by-fourteen              { padding-left: (14/@columns * @grid-width); }
-		.offset-by-fifteen               { padding-left: (15/@columns * @grid-width); }
-		.offset-by-sixteen               { padding-left: (16/@columns * @grid-width); }
-		.offset-by-seventeen             { padding-left: (17/@columns * @grid-width); }
-		.offset-by-eighteen              { padding-left: (18/@columns * @grid-width); }
-		.offset-by-nineteen              { padding-left: (19/@columns * @grid-width); }
-		.offset-by-twenty				 { padding-left: (20/@columns * @grid-width); }
-		.offset-by-twentyone             { padding-left: (21/@columns * @grid-width); }
-		.offset-by-twentytwo             { padding-left: (22/@columns * @grid-width); }
-		.offset-by-twentythree           { padding-left: (23/@columns * @grid-width); }
+
+		/* Trailing */
+		.trailing-by-one                 { padding-right: (1/@columns * @grid-width); }
+		.trailing-by-two                 { padding-right: (2/@columns * @grid-width); }
+		.trailing-by-three               { padding-right: (3/@columns * @grid-width); }
+		.trailing-by-four                { padding-right: (4/@columns * @grid-width); }
+		.trailing-by-five                { padding-right: (5/@columns * @grid-width); }
+		.trailing-by-six                 { padding-right: (6/@columns * @grid-width); }
+		.trailing-by-seven               { padding-right: (7/@columns * @grid-width); }
+		.trailing-by-eight               { padding-right: (8/@columns * @grid-width); }
 
 		/* Borders */
 		.border			{ background: url("images/content-border.gif") repeat-y scroll 0 0 transparent; }
