--- a/GCR.Web/Content/site.less
+++ b/GCR.Web/Content/site.less
@@ -211,6 +211,15 @@ h1, h2, h3, h4, h5, h6
 	margin-left:480px;
 }
 
+
+img.team-pic{
+	border:6px solid #bbbbbb;
+	margin-right:20px;
+	float:left;
+	width:150px;
+	height:200px;
+	.rounded-corners(2px);
+}
 /* Styles for validation helpers */
 .field-validation-error {
 	color: @error-font;
@@ -493,4 +502,6 @@ div.info a
 		filter: alpha(opacity=80);
     }
 }
+
+
 
