--- a/GCR.Web/Content/site.less
+++ b/GCR.Web/Content/site.less
@@ -211,15 +211,24 @@ h1, h2, h3, h4, h5, h6
 	margin-left:480px;
 }
 
+.team-pic
+{
+	margin-bottom:25px;
+	font-size:0.95em;
+	overflow: hidden;
+	height: 215px;
 
-img.team-pic{
-	border:6px solid #bbbbbb;
-	margin-right:20px;
-	float:left;
-	width:150px;
-	height:200px;
-	.rounded-corners(2px);
+    img
+    {
+        border: 6px solid #bbbbbb;
+        margin-right: 15px;
+        float: left;
+        width: 150px;
+        height: 200px;
+        .rounded-corners(2px);
+    }
 }
+
 /* Styles for validation helpers */
 .field-validation-error {
 	color: @error-font;
