--- a/GCR.Model/DB.Context.tt
+++ b/GCR.Model/DB.Context.tt
@@ -57,8 +57,7 @@ using System.Linq;
 
 <#=Accessibility.ForType(container)#> partial class <#=code.Escape(container)#> : DbContext
 {
-    public <#=code.Escape(container)#>()
-        : base("name=<#=container.Name#>")
+	protected void OnConstructorCalled()
     {
 <#
 if (!loader.IsLazyLoadingEnabled(container))
