--- a/GCR.Web/Views/Shared/_Layout.cshtml
+++ b/GCR.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <title>@ViewBag.Title - Gopher College Rugby</title>
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <!--[if IE]>
+        <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <![endif]-->
     <meta name="viewport" content="width=device-width" />
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/themes/base/css")
