--- a/GCR.Web/Views/Shared/_Layout.cshtml
+++ b/GCR.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width" />
     @Styles.Render("~/Content/css")
-    @Styles.Render("~/Content/themes/base/css")
+    @Styles.Render("~/Content/themes/css")
 </head>
 <body>
     <div id="body">
