--- a/GCR.Web/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/GCR.Web/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model ICollection<AuthenticationClientData>
+﻿@model ICollection<GCR.Core.Security.OAuthProvider>
 
 @if (Model.Count == 0)
 {
@@ -15,9 +15,9 @@ else
     <fieldset id="socialLoginList">
         <legend>Log in using another service</legend>
         <p>
-        @foreach (AuthenticationClientData p in Model)
+        @foreach (var p in Model)
         {
-            <button type="submit" name="provider" value="@p.AuthenticationClient.ProviderName" title="Log in using your @p.DisplayName account">@p.DisplayName</button>
+            <button type="submit" name="provider" value="@p.ProviderName" title="Log in using your @p.ProviderDisplayName account">@p.ProviderDisplayName</button>
         }
         </p>
     </fieldset>
