--- a/GCR.Web/Content/Site.css
+++ b/GCR.Web/Content/Site.css
@@ -13,11 +13,13 @@ body {
 }
 #body {
   background: transparent url(images/bottom.jpg) center bottom repeat-x;
+  position: relative;
 }
 #inner-body {
   min-height: 1200px;
   background: transparent url(images/background.jpg) center top repeat-x;
   padding-bottom: 50px;
+  position: relative;
 }
 #header {
   padding: 30px 0px;
@@ -101,9 +103,20 @@ body {
   padding: 40px 0 20px 0;
 }
 #footer {
-  min-height: 40px;
   background: #202020;
   color: #fafafa;
+  position: relative;
+}
+#footer a {
+  color: #ffffff;
+}
+#footer a:hover {
+  color: #d9d9d9;
+}
+#footer-inner {
+  width: 960px;
+  margin: 0 auto;
+  padding: 25px 5px 10px 5px;
 }
 h1,
 h2,
