--- a/GCR.Web/Views/Member/Index.cshtml
+++ b/GCR.Web/Views/Member/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<GCR.Web.Models.Member.MemberViewModel>
+﻿@model IEnumerable<GCR.Web.Models.MemberViewModel>
 
 @{
     ViewBag.Title = "Team Members";
