--- a/GCR.Web/Content/base.css
+++ b/GCR.Web/Content/base.css
@@ -199,6 +199,7 @@
   a {
     color: #006699;
     text-decoration: underline;
+    cursor: pointer;
   }
   blockquote {
     margin: 1.5em;
@@ -250,6 +251,11 @@
   ul {
     list-style-type: disc;
   }
+  ul.none {
+    list-style: none outside none;
+    margin: 0;
+    padding: 0;
+  }
   ol {
     list-style-type: decimal;
   }
@@ -262,26 +268,27 @@
   dd {
     margin-left: 1.5em;
   }
-  table {
+  table.table {
     margin-bottom: 1.4em;
     width: 100%;
+    border: 1px solid #eeeeee;
   }
-  th {
+  table.table th {
     font-weight: bold;
   }
-  thead th {
+  table.table thead th {
     background: #c3d9ff;
   }
-  th,
-  td,
-  caption {
+  table.table th,
+  table.table td,
+  table.table caption {
     padding: 4px 10px 4px 5px;
   }
-  tbody tr:nth-child(even) td,
-  tbody tr.even td {
+  table.table tbody tr:nth-child(even) td,
+  table.table tbody tr.even td {
     background: #e5ecf9;
   }
-  tfoot {
+  table.table tfoot {
     font-style: italic;
   }
   caption {
@@ -334,13 +341,22 @@
     padding-bottom: 0;
   }
   /* forms.css */
-  label {
+  label,
+  .editor-label {
     font-weight: bold;
+  }
+  .editor-label {
+    text-align: right;
+  }
+  .editor-label label {
+    padding: 6px 0;
+    margin: 0.5em 0;
+    display: block;
   }
   fieldset {
     padding: 0 1.4em 1.4em 1.4em;
     margin: 0 0 1.5em 0;
-    border: 1px solid #ccc;
+    border: 1px solid #ddd;
   }
   legend {
     font-weight: bold;
@@ -358,55 +374,59 @@
     margin-bottom: 0;
   }
   input[type=text],
+  input[type=number],
   input[type=password],
   input[type=url],
   input[type=email],
-  input.text,
-  input.title,
   textarea {
     background-color: #fff;
     border: 1px solid #bbb;
     color: #000;
+    padding: 6px 5px;
+    width: 225px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
   }
   input[type=text]:focus,
+  input[type=number]:focus,
   input[type=password]:focus,
   input[type=url]:focus,
   input[type=email]:focus,
-  input.text:focus,
-  input.title:focus,
   textarea:focus {
-    border-color: #666;
+    border-color: #888;
+    background-color: #e8f5ff;
   }
   select {
     background-color: #fff;
     border-width: 1px;
     border-style: solid;
+    padding: 6px, 5px;
+    width: 225px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
   }
   input[type=text],
+  input[type=number],
   input[type=password],
   input[type=url],
   input[type=email],
-  input.text,
-  input.title,
   textarea,
-  select {
+  select,
+  .button,
+  .buttonset {
     margin: 0.5em 0;
   }
-  input.text,
-  input.title {
-    width: 300px;
-    padding: 5px;
-  }
-  input.title {
-    font-size: 1.5em;
+  .button:hover {
+    color: #fafafa;
   }
   textarea {
     width: 390px;
-    height: 250px;
-    padding: 5px;
+    height: 200px;
   }
   form.inline {
-    line-height: 3;
+    display: inline;
   }
   form.inline p {
     margin-bottom: 0;
