--- a/GCR.Web/Content/base.less
+++ b/GCR.Web/Content/base.less
@@ -12,7 +12,6 @@
 @gutter: 5px;
 
 @error-font: #8a1f11;
-
 @error-background: #FFBABA;
 @error-border: #f58282;
 
@@ -32,14 +31,22 @@
 @font-alt-color: #fafafa;
 @heading-color: #222222;
 @link-color: #006699;
+@link--alt-color: #ffffff;
 
 @accent-color: #0079ce;
 @accent-alt-color: #996699;
-@strong-color: #003473;
+@strong-color: #053472;
 @main-color: #020202;
 @main-alt-color: #9c9ea5;
 @footer-color: #202020;
 @content-color: #ffffff;
+
+.rounded-corners (@radius: 3px)
+{
+	-moz-border-radius: @radius;
+	-webkit-border-radius: @radius;
+	border-radius: @radius;
+}
 
 @media screen, projection
 {
@@ -74,7 +81,7 @@
 	.right {float:right !important;}
 	p .right {margin:1.5em 0 1.5em 1.5em;padding:0;}
 	a:focus, a:hover {color:lighten(@link-color, 30%);}
-	a {color:@link-color;text-decoration:underline;}
+	a {color:@link-color;text-decoration:underline; cursor:pointer;}
 	blockquote {margin:1.5em;color:lighten(@font-color, 30%);font-style:italic;}
 	strong, dfn {font-weight:bold;}
 	em, dfn {font-style:italic;}
@@ -87,16 +94,24 @@
 	li ul, li ol {margin:0;}
 	ul, ol {margin:0 0.5em 1.5em 0;padding-left:1.5em;}
 	ul {list-style-type:disc;}
+	ul.none {list-style: none outside none;
+		margin: 0;
+		padding: 0;}
 	ol {list-style-type:decimal;}
 	dl {margin:0 0 1.5em 0;}
 	dl dt {font-weight:bold;}
 	dd {margin-left:1.5em;}
-	table {margin-bottom:1.4em;width:100%;}
-	th {font-weight:bold;}
-	thead th {background:#c3d9ff;}
-	th, td, caption {padding:4px 10px 4px 5px;}
-	tbody tr:nth-child(even) td, tbody tr.even td {background:#e5ecf9;}
-	tfoot {font-style:italic;}
+	table.table {
+		margin-bottom:1.4em;
+		width:100%;
+		border: 1px solid #eeeeee;
+
+		th {font-weight:bold;}
+		thead th {background:#c3d9ff;}
+		th, td, caption {padding:4px 10px 4px 5px;}
+		tbody tr:nth-child(even) td, tbody tr.even td {background:#e5ecf9;}
+		tfoot {font-style:italic;}
+	}
 	caption {background:#eee;}
 	.small {font-size:.8em;margin-bottom:1.875em;line-height:1.875em;}
 	.large {font-size:1.2em;line-height:2.5em;margin-bottom:1.25em;}
@@ -112,19 +127,75 @@
 	.bottom {margin-bottom:0;padding-bottom:0;}
 
 	/* forms.css */
-	label {font-weight:bold;}
-	fieldset {padding:0 1.4em 1.4em 1.4em;margin:0 0 1.5em 0;border:1px solid #ccc;}
+	label, .editor-label { font-weight:bold; }
+    .editor-label {
+            text-align: right;
+
+            label {
+                padding: 6px 0;
+                margin: 0.5em 0;
+				display: block;
+            }
+    }
+	fieldset {padding:0 1.4em 1.4em 1.4em;margin:0 0 1.5em 0;border:1px solid #ddd;}
 	legend {font-weight:bold;font-size:1.2em;margin-top:-0.2em;margin-bottom:1em;}
 	fieldset, #IE8#HACK {padding-top:1.4em;}
 	legend, #IE8#HACK {margin-top:0;margin-bottom:0;}
-	input[type=text], input[type=password], input[type=url], input[type=email], input.text, input.title, textarea {background-color:#fff;border:1px solid #bbb;color:#000;}
-	input[type=text]:focus, input[type=password]:focus, input[type=url]:focus, input[type=email]:focus, input.text:focus, input.title:focus, textarea:focus {border-color:#666;}
-	select {background-color:#fff;border-width:1px;border-style:solid;}
-	input[type=text], input[type=password], input[type=url], input[type=email], input.text, input.title, textarea, select {margin:0.5em 0;}
-	input.text, input.title {width:300px;padding:5px;}
-	input.title {font-size:1.5em;}
-	textarea {width:390px;height:250px;padding:5px;}
-	form.inline {line-height:3;}
+	input[type=text], 
+	input[type=number],
+	input[type=password], 
+	input[type=url], 
+	input[type=email],  
+	textarea {
+		background-color:#fff;
+		border:1px solid #bbb;
+		color:#000;
+		padding: 6px 5px;
+		width:225px;
+		.rounded-corners(2px);
+	}
+
+	input[type=text]:focus, 
+	input[type=number]:focus,
+	input[type=password]:focus, 
+	input[type=url]:focus, 
+	input[type=email]:focus,  
+	textarea:focus {
+		border-color:#888;
+		background-color: lighten(@accent-color, 55%);
+	}
+
+	select 
+	{
+		background-color:#fff;
+		border-width:1px;
+		border-style:solid;
+	 	padding:6px, 5px;
+		width:225px;
+		.rounded-corners(2px);
+	}
+
+	input[type=text], 
+	input[type=number],
+	input[type=password], 
+	input[type=url], 
+	input[type=email], 
+	textarea, 
+	select ,
+	.button,
+	.buttonset
+	{margin:0.5em 0;}
+
+	.buttonset {
+		//padding-top:2px;
+	}
+
+    .button:hover {
+		color:@font-alt-color;
+    }
+
+	textarea {width:390px;height:200px;}
+	form.inline {display: inline;}
 	form.inline p {margin-bottom:0;}
 	.error, .alert, .notice, .success, .info {padding:0.8em;margin-bottom:1em;border:2px solid #ddd;}
 	.error, .alert {background:@error-background;color:@error-font;border-color:@error-border;}
