--- a/GCR.Web/Views/Shared/_Layout.cshtml
+++ b/GCR.Web/Views/Shared/_Layout.cshtml
@@ -57,12 +57,18 @@
     </div>
     <div id="footer">
         <div id="footer-inner">
-                    <p>&copy; @DateTime.Now.Year - Gopher College Rugby &nbsp; | &nbsp;  @Html.LoginView()</p>
+                    <div>&copy; @DateTime.Now.Year - Gopher College Rugby &nbsp; | &nbsp;  @{Html.RenderPartial("_LoginView");} </div>
         </div>
 
     </div>
     @Scripts.Render("~/Script/base")
     <script type="text/javascript" src="~/Scripts/jquery.jcarousel.min.js"></script>
     @RenderSection("scripts", required: false)
+    <script type="text/javascript">
+        $(function () {
+            $("input[type=submit], input[type=button], button, .button").button();
+            $(".buttonset").buttonset();
+        });
+    </script>
 </body>
 </html>
