--- a/GCR.Web/Content/site.less
+++ b/GCR.Web/Content/site.less
@@ -238,13 +238,17 @@ h1, h2, h3, h4, h5, h6
 
     img
     {
-        border: 6px solid #bbbbbb;
         margin-right: 15px;
         float: left;
         width: 150px;
         height: 200px;
-        .rounded-corners(2px);
     }
+}
+
+img.photo
+{
+    border: 6px solid #bbbbbb;
+    .rounded-corners(2px);
 }
 
 /* Styles for validation helpers */
