--- a/GCR.Web/Views/Member/Index.cshtml
+++ b/GCR.Web/Views/Member/Index.cshtml
@@ -10,7 +10,7 @@
         {
             <div class="ten columns offset-by-one trailing-by-one team-pic">
 
-                <img src="@Url.Content(item.PhotoForDisplay)" alt="@item.FullName" class="team-pic" />
+                <img src="@Url.Content(item.PhotoForDisplay)" alt="@item.FullName" class="photo" />
 
                 <h3>@item.FullName</h3>
 
